Update to selenium 3.*